# Crucible

./: .gitignore  .gitmodules  CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
dotnet/Crucible/: Crucible.sln  global.json
dotnet/Crucible-Runtime/: Crucible-Runtime.sln
dotnet/Crucible-Runtime/Crucible-Runtime/: Crucible-Runtime.csproj
dotnet/Crucible-Runtime/Crucible-Runtime/Core/: Camera.cs  GameLoop.cs  GameManager.cs  GameWorld.cs  Material.cs  Matrix.cs  Matrix4x4.cs  MeshInstance.cs  MeshRenderer.cs  Node.cs  NodeBehavior.cs  NodePointer.cs  NodeReference.cs  Quaternion.cs  ShaderReference.cs  Texture.cs  Transform.cs  UUID.cs  Vector3.cs
dotnet/Crucible-Runtime/Crucible-Runtime/Core/Animation/: Bone.cs  Skeleton.cs
dotnet/Crucible-Runtime/Crucible-Runtime/Core/Attributes/: ComponentAttribute.cs  Expose.cs
dotnet/Crucible-Runtime/Crucible-Runtime/Core/Exceptions/: ComponentNotFoundException.cs
dotnet/Crucible-Runtime/Crucible-Runtime/Core/Utils/: MathUtils.cs
dotnet/Crucible-Runtime/Crucible-Runtime/Initialization/: BlittableHelper.cs  CrucibleAssemblyLoadContext.cs  DelegateCreator.cs  Initializer.cs  Interop.cs
dotnet/Crucible/Crucible/: Crucible.csproj  DelegateCreator.cs  GameObject.cs  GameWorld.cs  Initializer.cs  Interop.cs  Scene.cs  Transform.cs  Vector3.cs
dotnet/Crucible/Crucible-Editor/: Crucible-Editor.csproj  EditorWindow.cs
dotnet/Crucible/Crucible-Runtime/: BlittableHelper.cs  CameraViewData.cs  ComponentAttribute.cs  Crucible-Runtime.csproj  CrucibleAssemblyLoadContext.cs  DelegateCreator.cs  GameObject.cs  GameSystem.cs  GameWorld.cs  Initializer.cs  Interop.cs  Matrix4x4.cs  Mesh.cs  Quaternion.cs  Renderer.cs  Scene.cs  Script.cs  TestObject.cs  Texture.cs  Transform.cs  Vector2.cs  Vector3.cs  Vector4.cs  Vertex3d.cs
dotnet/Crucible/Crucible-Runtime/Attributes/: ComponentAttribute.cs  ExposeAttribute.cs
dotnet/Crucible/Crucible-Runtime/Nodes/: Node.cs  Node3D.cs
dotnet/Crucible/Crucible-Runtime/UI/: Measurement.cs  UIElement.cs
editor/: Program.cpp  main.cpp
editor/Graphics/DearImGUI/: imgui_impl_slag.cpp  imgui_impl_slag.h
example/: example.cpp
examples/cube/: Main.cpp
examples/cube/CubeExample/: CubeExample.sln
examples/cube/CubeExample/CubeExample/: CubeExample.csproj  CubeGameLoop.cs
examples/cube/resources/: cube.cmodel
examples/cube/shaders/: Flat-Textured.cshdr  Null.cshdr  flat-test.csbf
slang/: Animated-Flat.slang  CrucibleCore.slang  Flat-Textured.slang  Mesh.slang  Null.slang
specs/: CrucibleShaderBundleFormat.md  CrucibleShaderFormat.md  MeshFormat.md  SkeletonFormat.md
src/: Crucible.cpp  CrucibleLib.cpp  CrucibleLib.h  Mesh.cpp  Mesh.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h
src/core/: Window.cpp  Window.h
src/crucible/: Crucible.cpp  Crucible.h  CrucibleCore.h  Engine.cpp  Engine.h  EntityComponentSystem.cpp  EntityComponentSystem.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Window.cpp  Window.h
src/crucible/Core/: Node.cpp  Node.h
src/crucible/Graphics/: Camera.cpp  Camera.h  CameraViewData.cpp  CameraViewData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderRegistry.cpp  RenderRegistry.h  Vertex2D.h  Vertex3D.h
src/crucible/Graphics/Shaders/: EngineShader.cpp  EngineShader.h  MaterialShader.cpp  MaterialShader.h  ShaderLibrary.cpp  ShaderLibrary.h
src/crucible/Graphics/dear-imgui/: imgui_impl_slag.cpp  imgui_impl_slag.h
src/crucible/Scripting/: GameWorld.cpp  GameWorld.h  Interop.cpp  Interop.h  ManagedFunction.cpp  ManagedFunction.h  ManagedObjectGCHandle.cpp  ManagedObjectGCHandle.h  ManagedObjectHandle.cpp  ManagedObjectHandle.h  ManagedType.cpp  ManagedType.h  ScriptingEngine.cpp  ScriptingEngine.h
src/crucible/core/: Bone.h  Camera.cpp  Camera.h  ECSInterop.cpp  ECSInterop.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ShaderManager.cpp  ShaderManager.h  Skeleton.cpp  Skeleton.h  TextureLoader.cpp  TextureLoader.h  Transform.cpp  Transform.h  VertexAttributeStream.cpp  VertexAttributeStream.h  VirtualBuffer.cpp  VirtualBuffer.h  VirtualUniformBuffer.cpp  VirtualUniformBuffer.h
src/crucible/core/animation/: Bone.cpp  Bone.h  Keyframe.cpp  Keyframe.h  Skeleton.cpp  Skeleton.h
src/crucible/core/interop/: CSharpEntity.h
src/crucible/core/rendering/: MeshPass.cpp  MeshPass.h  MeshShaderBlock.cpp  MeshShaderBlock.h  RenderData.cpp  RenderData.h  RenderGraph.cpp  RenderGraph.h  RenderGraphResourceData.cpp  RenderGraphResourceData.h  RenderGraphResourceDictionary.cpp  RenderGraphResourceDictionary.h  RenderPriority.cpp  RenderPriority.h  RenderStage.cpp  RenderStage.h
src/crucible/core/scenes/: Node.cpp  Node.h  Scene.cpp  Scene.h  World.cpp  World.h
src/crucible/core/serialization/: Serializer.h
src/crucible/scripting/: CSEntity.cpp  CSEntity.h  CoreFunctions.cpp  CoreFunctions.h  InteropString.h  ManagedInstance.cpp  ManagedInstance.h  ManagedType.cpp  ManagedType.h  ScriptingEngine.cpp  ScriptingEngine.h
src/crucible/serialization/: Serializer.cpp  Serializer.h
src/scripting/: ManagedType.h  ScriptingEngine.cpp
test/: Main.cpp
test/dotnet/Crucible-Runtime-Tests/: Crucible-Runtime-Tests.sln
test/dotnet/Crucible-Runtime-Tests/Crucible-Runtime-Tests/: Crucible-Runtime-Tests.csproj  DummyObject.cs  NodeTest.cs  TestBehavior.cs  TransformTest.cs
test/shaders/: flat-test.csbf  test-basic.csbf
test/tests/: MeshTest.cpp  ModelTest.cpp  NodeBehaviorTest.cpp  NodeTest.cpp  ScriptingTest.cpp  ShaderManagerTests.cpp  SkeletonTest.cpp  TextureLoaderTest.cpp  TransformTest.cpp  VirtualUniformBufferTest.cpp
tests/: example.cpp
